[package]
name = "drive-lab-processer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amqprs = "1.5.4"
async-global-executor = "2.4.1"
futures-lite = "2.3.0"
image = "0.25.1"
lapin = "2.3.1"
rusty-tesseract = "1.1.10"
serde = "1.0.197"
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.12"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
